--- a/web-src/package.json
+++ b/web-src/package.json
@@ -11,15 +11,10 @@
     "dev": "npm run serve"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0",
-    "chartist": "^0.11.0",
-    "es6-promise": "^4.2.4",
-    "vue": "^2.6.10",
-    "vue-clickaway": "^2.1.0",
-    "vue-notifyjs": "^0.3.0",
-    "vue-router": "^3.0.1",
     "axios": "^0.20.0",
+    "bootstrap": "^4.0.0",
     "chart.js": "^2.9.3",
+    "chartist": "^0.11.0",
     "chartjs-plugin-annotation": "^0.5.7",
     "circos": "^2.1.0",
     "d3": "^4.13.0",
@@ -28,6 +23,9 @@
     "datatables.net-buttons": "^1.6.5",
     "datatables.net-buttons-dt": "^1.6.5",
     "datatables.net-dt": "^1.10.22",
+    "es6-promise": "^4.2.4",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.1.4",
     "jquery": "^3.5.1",
     "jszip": "^3.5.0",
     "material-design-icons-iconfont": "^6.1.0",
@@ -35,7 +33,11 @@
     "pako": "^2.0.2",
     "pdfmake": "^0.1.68",
     "phylocanvas": "^2.8.1",
-    "phylotree": "^1.0.0-alpha.22"
+    "phylotree": "^1.0.0-alpha.22",
+    "vue": "^2.6.10",
+    "vue-clickaway": "^2.1.0",
+    "vue-notifyjs": "^0.3.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
